[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Nested_SSH"
version = "1.0.1"
authors = [
  { name="Richelmy Monteiro", email="richmont.contact@protonmail.com" },
]
description = "A library to send SSH commands through a gateway using threads"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Operating System :: OS Independent",
]

dependencies = [
"attrs==22.1.0",
"cffi==1.15.1",
"colorama==0.4.6",
"cryptography==38.0.4",
"exceptiongroup==1.0.4",
"iniconfig==1.1.1",
"packaging==22.0",
"paramiko==2.12.0",
"pluggy==1.0.0",
"pycparser==2.21",
"PyNaCl==1.5.0",
"pytest==7.2.0",
"pytest-mock==3.10.0",
"python-dotenv==0.21.0",
"six==1.16.0",
"tomli==2.0.1",
]

[project.urls]
"Homepage" = "https://github.com/richmont/Nested_SSH"
"Bug Tracker" = "https://github.com/richmont/Nested_SSH/issues"